tests/unit-fail-compilation/j055e.c.ref
j055e.c:3:1: error: Signed integer overflow.
  Undefined behavior (UB-CCV1).
   see C11 section 6.5:5 http://rvdoc.org/C11/6.5
   see C11 section J.2:1 item 36 http://rvdoc.org/C11/J.2
   see CERT-C section INT32-C http://rvdoc.org/CERT-C/INT32-C
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j055e.c to see commands run.
